--- a/index.html
+++ b/index.html
@@ -388,5 +388,12 @@
   });
 })();
 </script>
+      <!-- your other scripts already here -->
+
+    <!-- Color Assistant -->
+    <link rel="stylesheet" href="styles.css">
+    <script src="color-assistant.js" defer></script>
+</body>
+</html>
 <!-- /CTC one-file bundle --></body>
 </html>
